chore: adiciona objeto Prompt_Log__c e aba Prompt_Log ao package.xml

--- a/force-app/main/default/package.xml
+++ b/force-app/main/default/package.xml
@@ -8,5 +8,13 @@
         <members>promptOpsLayer</members>
         <name>LightningComponentBundle</name>
     </types>
+    <types>
+        <members>Prompt_Log__c</members>
+        <name>CustomObject</name>
+    </types>
+    <types>
+        <members>Prompt_Log</members>
+        <name>CustomTab</name>
+    </types>
     <version>60.0</version>
 </Package>
